add friend post feed
