# internal/service/post/repository/struct.go
@@ -1,0 +1,16 @@
+package repository
+
+import (
+	"errors"
+	"time"
+)
+
+var ErrEOF = errors.New("eof")
+
+type Post struct {
+	ID           string
+	AuthorUserID string
+	Text         string
+	CreatedAt    time.Time
+	UpdatedAt    time.Time
+}
